language_theory/autocell_backup_620/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statement opt_statements

   9  statement : cell ASSIGN expression
  10            | ID ASSIGN expression
  11            | IF conditional THEN opt_statements END
  12            | IF conditional THEN opt_statements ELSE opt_statements END
  13            | IF conditional THEN opt_statements ELSEIF conditional THEN opt_statements END

  14  cell : LBRACKET INT COMMA INT RBRACKET

  15  exps : eval
  16       | cell
  17       | INT
  18       | ID
  19       | LPAREN expression RPAREN

  20  eval : ADD exps
  21       | SUB exps

  22  prio : exps
  23       | exps MULT prio
  24       | exps DIV prio
  25       | exps MODU prio

  26  expression : prio
  27             | expression ADD prio
  28             | expression SUB prio

  29  conditional : expression EQUALS expression
  30              | expression NOTEQUALS expression
  31              | expression LESSTHAN expression
  32              | expression GREATERTHAN expression
  33              | expression LESSTHANEQUALS expression
  34              | expression GREATERTHANEQUALS expression

  35  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (35)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (35)

	.  reduce 35


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	EOF  reduce 7

	opt_statements  goto 21
	statement  goto 22
	cell  goto 23


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 24


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 25
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (14)

	INT  shift 26
	.  error


state 19
	statement : ID . ASSIGN expression  (10)

	ASSIGN  shift 27
	.  error


state 20
	statement : IF . conditional THEN opt_statements END  (11)
	statement : IF . conditional THEN opt_statements ELSE opt_statements END  (12)
	statement : IF . conditional THEN opt_statements ELSEIF conditional THEN opt_statements END  (13)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 34
	conditional  goto 35
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 21
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 39
	.  error


state 22
	opt_statements : statement . opt_statements  (8)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	EOF  reduce 7
	END  reduce 7
	ELSE  reduce 7
	ELSEIF  reduce 7

	opt_statements  goto 40
	statement  goto 22
	cell  goto 23


state 23
	statement : cell . ASSIGN expression  (9)

	ASSIGN  shift 41
	.  error


state 24
	fields : fields COMMA field .  (5)

	.  reduce 5


state 25
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 42
	.  error


state 26
	cell : LBRACKET INT . COMMA INT RBRACKET  (14)

	COMMA  shift 43
	.  error


state 27
	statement : ID ASSIGN . expression  (10)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 44
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 28
	eval : ADD . exps  (20)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	exps  goto 45
	eval  goto 37


state 29
	eval : SUB . exps  (21)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	exps  goto 46
	eval  goto 37


state 30
	exps : LPAREN . expression RPAREN  (19)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 47
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 31
	exps : ID .  (18)

	.  reduce 18


state 32
	exps : INT .  (17)

	.  reduce 17


state 33
	exps : cell .  (16)

	.  reduce 16


state 34
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)
	conditional : expression . EQUALS expression  (29)
	conditional : expression . NOTEQUALS expression  (30)
	conditional : expression . LESSTHAN expression  (31)
	conditional : expression . GREATERTHAN expression  (32)
	conditional : expression . LESSTHANEQUALS expression  (33)
	conditional : expression . GREATERTHANEQUALS expression  (34)

	ADD  shift 48
	SUB  shift 49
	EQUALS  shift 50
	NOTEQUALS  shift 51
	LESSTHAN  shift 52
	GREATERTHAN  shift 53
	LESSTHANEQUALS  shift 54
	GREATERTHANEQUALS  shift 55
	.  error


state 35
	statement : IF conditional . THEN opt_statements END  (11)
	statement : IF conditional . THEN opt_statements ELSE opt_statements END  (12)
	statement : IF conditional . THEN opt_statements ELSEIF conditional THEN opt_statements END  (13)

	THEN  shift 56
	.  error


state 36
	prio : exps .  (22)
	prio : exps . MULT prio  (23)
	prio : exps . DIV prio  (24)
	prio : exps . MODU prio  (25)

	MULT  shift 57
	DIV  shift 58
	MODU  shift 59
	EOF  reduce 22
	END  reduce 22
	LBRACKET  reduce 22
	ADD  reduce 22
	SUB  reduce 22
	RPAREN  reduce 22
	ID  reduce 22
	IF  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	ELSEIF  reduce 22
	EQUALS  reduce 22
	NOTEQUALS  reduce 22
	LESSTHAN  reduce 22
	GREATERTHAN  reduce 22
	LESSTHANEQUALS  reduce 22
	GREATERTHANEQUALS  reduce 22


state 37
	exps : eval .  (15)

	.  reduce 15


state 38
	expression : prio .  (26)

	.  reduce 26


state 39
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 40
	opt_statements : statement opt_statements .  (8)

	.  reduce 8


state 41
	statement : cell ASSIGN . expression  (9)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 60
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 42
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 43
	cell : LBRACKET INT COMMA . INT RBRACKET  (14)

	INT  shift 61
	.  error


state 44
	statement : ID ASSIGN expression .  (10)
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)

	ADD  shift 48
	SUB  shift 49
	EOF  reduce 10
	END  reduce 10
	LBRACKET  reduce 10
	ID  reduce 10
	IF  reduce 10
	ELSE  reduce 10
	ELSEIF  reduce 10


state 45
	eval : ADD exps .  (20)

	.  reduce 20


state 46
	eval : SUB exps .  (21)

	.  reduce 21


state 47
	exps : LPAREN expression . RPAREN  (19)
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)

	ADD  shift 48
	SUB  shift 49
	RPAREN  shift 62
	.  error


state 48
	expression : expression ADD . prio  (27)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	exps  goto 36
	eval  goto 37
	prio  goto 63


state 49
	expression : expression SUB . prio  (28)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	exps  goto 36
	eval  goto 37
	prio  goto 64


state 50
	conditional : expression EQUALS . expression  (29)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 65
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 51
	conditional : expression NOTEQUALS . expression  (30)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 66
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 52
	conditional : expression LESSTHAN . expression  (31)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 67
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 53
	conditional : expression GREATERTHAN . expression  (32)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 68
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 54
	conditional : expression LESSTHANEQUALS . expression  (33)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 69
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 55
	conditional : expression GREATERTHANEQUALS . expression  (34)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 70
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 56
	statement : IF conditional THEN . opt_statements END  (11)
	statement : IF conditional THEN . opt_statements ELSE opt_statements END  (12)
	statement : IF conditional THEN . opt_statements ELSEIF conditional THEN opt_statements END  (13)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	END  reduce 7
	ELSE  reduce 7
	ELSEIF  reduce 7

	opt_statements  goto 71
	statement  goto 22
	cell  goto 23


state 57
	prio : exps MULT . prio  (23)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	exps  goto 36
	eval  goto 37
	prio  goto 72


state 58
	prio : exps DIV . prio  (24)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	exps  goto 36
	eval  goto 37
	prio  goto 73


state 59
	prio : exps MODU . prio  (25)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	exps  goto 36
	eval  goto 37
	prio  goto 74


state 60
	statement : cell ASSIGN expression .  (9)
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)

	ADD  shift 48
	SUB  shift 49
	EOF  reduce 9
	END  reduce 9
	LBRACKET  reduce 9
	ID  reduce 9
	IF  reduce 9
	ELSE  reduce 9
	ELSEIF  reduce 9


state 61
	cell : LBRACKET INT COMMA INT . RBRACKET  (14)

	RBRACKET  shift 75
	.  error


state 62
	exps : LPAREN expression RPAREN .  (19)

	.  reduce 19


state 63
	expression : expression ADD prio .  (27)

	.  reduce 27


state 64
	expression : expression SUB prio .  (28)

	.  reduce 28


state 65
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)
	conditional : expression EQUALS expression .  (29)

	ADD  shift 48
	SUB  shift 49
	THEN  reduce 29


state 66
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)
	conditional : expression NOTEQUALS expression .  (30)

	ADD  shift 48
	SUB  shift 49
	THEN  reduce 30


state 67
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)
	conditional : expression LESSTHAN expression .  (31)

	ADD  shift 48
	SUB  shift 49
	THEN  reduce 31


state 68
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)
	conditional : expression GREATERTHAN expression .  (32)

	ADD  shift 48
	SUB  shift 49
	THEN  reduce 32


state 69
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)
	conditional : expression LESSTHANEQUALS expression .  (33)

	ADD  shift 48
	SUB  shift 49
	THEN  reduce 33


state 70
	expression : expression . ADD prio  (27)
	expression : expression . SUB prio  (28)
	conditional : expression GREATERTHANEQUALS expression .  (34)

	ADD  shift 48
	SUB  shift 49
	THEN  reduce 34


state 71
	statement : IF conditional THEN opt_statements . END  (11)
	statement : IF conditional THEN opt_statements . ELSE opt_statements END  (12)
	statement : IF conditional THEN opt_statements . ELSEIF conditional THEN opt_statements END  (13)

	END  shift 76
	ELSE  shift 77
	ELSEIF  shift 78
	.  error


state 72
	prio : exps MULT prio .  (23)

	.  reduce 23


state 73
	prio : exps DIV prio .  (24)

	.  reduce 24


state 74
	prio : exps MODU prio .  (25)

	.  reduce 25


state 75
	cell : LBRACKET INT COMMA INT RBRACKET .  (14)

	.  reduce 14


state 76
	statement : IF conditional THEN opt_statements END .  (11)

	.  reduce 11


state 77
	statement : IF conditional THEN opt_statements ELSE . opt_statements END  (12)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	END  reduce 7

	opt_statements  goto 79
	statement  goto 22
	cell  goto 23


state 78
	statement : IF conditional THEN opt_statements ELSEIF . conditional THEN opt_statements END  (13)

	LBRACKET  shift 18
	ADD  shift 28
	SUB  shift 29
	LPAREN  shift 30
	ID  shift 31
	INT  shift 32
	.  error

	cell  goto 33
	expression  goto 34
	conditional  goto 80
	exps  goto 36
	eval  goto 37
	prio  goto 38


state 79
	statement : IF conditional THEN opt_statements ELSE opt_statements . END  (12)

	END  shift 81
	.  error


state 80
	statement : IF conditional THEN opt_statements ELSEIF conditional . THEN opt_statements END  (13)

	THEN  shift 82
	.  error


state 81
	statement : IF conditional THEN opt_statements ELSE opt_statements END .  (12)

	.  reduce 12


state 82
	statement : IF conditional THEN opt_statements ELSEIF conditional THEN . opt_statements END  (13)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	END  reduce 7

	opt_statements  goto 83
	statement  goto 22
	cell  goto 23


state 83
	statement : IF conditional THEN opt_statements ELSEIF conditional THEN opt_statements . END  (13)

	END  shift 84
	.  error


state 84
	statement : IF conditional THEN opt_statements ELSEIF conditional THEN opt_statements END .  (13)

	.  reduce 13


32 terminals, 14 nonterminals
36 grammar rules, 85 states
